# windshot

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
src/editing_area/: command.rs  mod.rs  selection.rs
